--- a/export-landsat-images-from-earthtime.ipynb
+++ b/export-landsat-images-from-earthtime.ipynb
@@ -8,10 +8,7 @@
    "source": [
     "from urllib.parse import quote, urlparse\n",
     "import urllib.request\n",
-    "import oos, requests\n",
-    "import os, sys\n",
-    "\n",
-    "import datetime"
+    "import datetime, os, requests, sys\n"
    ]
   },
   {
@@ -137,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_landsat_images_from_earthtime('https://earthtime.org/explore#v=36.15028,-114.54353,9.608,latLng&t=3.2&ps=50&l=blsat&bt=19840101&et=20221231')"
+    "#export_landsat_images_from_earthtime('https://earthtime.org/explore#v=36.15028,-114.54353,9.608,latLng&t=3.2&ps=50&l=blsat&bt=19840101&et=20221231')"
    ]
   }
  ],
