--- a/export-landsat-images-from-earthtime.ipynb
+++ b/export-landsat-images-from-earthtime.ipynb
@@ -94,7 +94,7 @@
     "def export_landsat_images_from_earthtime(sharelink, odir=None, w='5120', h='2880'):\n",
     "    years = range(1984,2023)\n",
     "    dates = ['%s0401' % x for x in years]\n",
-    "    u = urlparse(url)\n",
+    "    u = urlparse(sharelink)\n",
     "    v = None\n",
     "    l = None\n",
     "    for fragment in u.fragment.split('&'):\n",
@@ -136,6 +136,22 @@
    "source": [
     "#export_landsat_images_from_earthtime('https://earthtime.org/explore#v=36.15028,-114.54353,9.608,latLng&t=3.2&ps=50&l=blsat&bt=19840101&et=20221231')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "export_landsat_images_from_earthtime('https://earthtime.org/explore#v=36.08499,-114.73683,10.109,latLng&t=0&ps=50&l=blsat&bt=19840101&et=20221231')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
