Add generalized export function

--- a/export-landsat-images-from-earthtime.ipynb
+++ b/export-landsat-images-from-earthtime.ipynb
@@ -123,7 +123,44 @@
     "    for t in thumbnails:\n",
     "        download_file(t[0], t[1])\n",
     "    return True\n",
+    "\n",
+    "def export_images_from_earthtime(sharelink, start_date=1984, end_date=2022, odir=None, w='5120', h='2880'):\n",
+    "    years = range(start_date,end_date+1)\n",
+    "    dates = []\n",
+    "    for y in years:\n",
+    "        for m in range(1,13):\n",
+    "            dates.append('%s%s01' % (str(y), str(m).zfill(2)))\n",
+    "    u = urlparse(sharelink)\n",
+    "    v = None\n",
+    "    l = None\n",
+    "    for fragment in u.fragment.split('&'):\n",
+    "        key,val = fragment.split('=')\n",
+    "        if key == 'v':\n",
+    "            v = val\n",
+    "        if key == 'l':\n",
+    "            l = val\n",
+    "    if v is None or l is None:\n",
+    "        print('Malformed sharelink')\n",
+    "        return False\n",
     "    \n",
+    "    if odir is None:\n",
+    "        now = datetime.datetime.now()\n",
+    "        timestamp = int(now.timestamp())\n",
+    "        odir = '%s_%s' % (l.replace(',','_'), timestamp)\n",
+    "\n",
+    "    os.makedirs(odir, exist_ok=True)\n",
+    "    thumbnails = []\n",
+    "    for date in dates:\n",
+    "        bt = et = date\n",
+    "        root_arg = RootArg(v,l,bt,et)\n",
+    "        thumbnail_url = ThumbnailUrl(quote(root_arg.get(), safe=''), w, h)\n",
+    "        fname = str(date) + '.png'\n",
+    "        thumbnails.append((thumbnail_url.get(), os.path.join(odir,fname)))\n",
+    "    for t in thumbnails:\n",
+    "        print(t[0])\n",
+    "        download_file(t[0], t[1])\n",
+    "    return True\n",
+    "\n",
     "    \n",
     "    "
    ]
@@ -144,6 +181,21 @@
    "outputs": [],
    "source": [
     "export_landsat_images_from_earthtime('https://earthtime.org/explore#v=36.08499,-114.73683,10.109,latLng&t=0&ps=50&l=blsat&bt=19840101&et=20221231')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sharelink = 'https://earthtime.org/explore#v=8.3659,8.80543,0.864,latLng&t=1.53&ps=50&l=uf,bdrk_simple&bt=20000101&et=20151231'\n",
+    "start_year = 2000\n",
+    "end_year = 2015\n",
+    "out_dir = None\n",
+    "width = '3840'\n",
+    "height = '2160'\n",
+    "export_images_from_earthtime(sharelink, start_year, end_year, out_dir, width, height)"
    ]
   },
   {
