--- a/export-landsat-images-from-earthtime.ipynb
+++ b/export-landsat-images-from-earthtime.ipynb
@@ -193,7 +193,7 @@
     "start_year = 2000\n",
     "end_year = 2015\n",
     "out_dir = None\n",
-    "export_images_from_earthtime(sharelink, start_year, end_year, out_dir, width, height)"
+    "export_images_from_earthtime(sharelink, start_year, end_year, out_dir)"
    ]
   },
   {
